--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
 
 * {
   margin: 0;
@@ -30,6 +31,9 @@ body {
   height: 225px;
   background-size: cover;
   background-image: var(--top-img);
+}
+.button {
+  display: none;
 }
 main {
   position: absolute;
@@ -286,5 +290,21 @@ main {
   }
   .footer {
     margin-top: 24px;
+  }
+  .button--div{
+    margin-left: 80%;
+  }
+  .button {
+    background-color: #0b6ec5;
+    font-family: 'Kanit', sans-serif;
+    border: none;
+    color: white;
+    padding: 6px 15px;
+    border-radius: 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
   }
 }
