--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@500&display=swap');
 
 * {
   margin: 0;
@@ -34,6 +35,112 @@ body {
 }
 .button {
   display: none;
+}
+.menu-btn {
+  display: block;
+}   
+.menu-btn {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  margin-left: auto;
+  margin-right: 10%;
+  align-items: center;
+  width: 80px;
+  height: 80px;
+  cursor: pointer;
+  transition: all .5s ease-in-out;
+}
+.menu-btn__burger {
+  width: 50px;
+  height: 6px;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(255,101,47,.2);
+  transition: all .5s ease-in-out;
+}
+.menu-btn__burger::before,
+.menu-btn__burger::after {
+content: '';
+position: absolute;
+width: 50px;
+height: 6px;
+background: #fff;
+border-radius: 5px;
+box-shadow: 0 2px 5px rgba(255,101,47,.2);
+transition: all .5s ease-in-out;
+}
+.menu-btn__burger::before {
+transform: translateY(-16px);
+}
+.menu-btn__burger::after {
+transform: translateY(16px);
+}
+/* ANIMATION */
+.menu-btn.open .menu-btn__burger {
+transform: translateX(-50px);
+background: transparent;
+box-shadow: none;
+}
+.menu-btn.open .menu-btn__burger::before {
+transform: rotate(45deg) translate(35px, -35px);
+}
+.menu-btn.open .menu-btn__burger::after {
+transform: rotate(-45deg) translate(35px, 35px);
+}
+.dropdown_content {
+  display: none;
+  border-radius: 25px;
+  position: absolute;
+  top: 100%;
+  right: 1%;
+  background-color: rgb(14, 13, 14);
+  min-width: 350%;
+  min-height: 200%; 
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+  transition: transform .3s ease-in;
+}
+.menu-items {
+  text-align: center;
+  font-family: 'Sarabun', sans-serif;
+  font-size: 2rem;
+}
+ul {
+  margin: 1%;
+  padding: 0;
+  list-style: none;
+  height: 5em;
+  display: flex;
+  width: 90%;
+}
+li {
+  list-style: none;
+  transition: all ease-in-out .5s;
+  line-height: 170%;
+}
+li a {
+  text-decoration: none;
+}
+a:link {
+  text-decoration: none;
+  color: aliceblue;
+}
+a:visited {
+  text-decoration: none;
+  color: aliceblue;
+}
+a:hover {
+  text-decoration: underline;
+  color: aliceblue;
+}
+a:active {
+  text-decoration: underline;
+  color: aliceblue;
+}
+.nav-desktop {
+display: none;
 }
 main {
   position: absolute;
@@ -306,5 +413,14 @@ main {
     display: inline-block;
     font-size: 16px;
     cursor: pointer;
+  }
+  .menu-btn__burger {
+    display: none;
+  }
+  .dropdown_content {
+    display: none;
+  }
+  .menu-items {
+    display: none;
   }
 }
