--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
 
 * {
   margin: 0;
@@ -94,7 +95,7 @@ transform: rotate(-45deg) translate(35px, 35px);
   position: absolute;
   top: 100%;
   right: 1%;
-  background-color: rgb(14, 13, 14);
+  background-color: rgb(255, 255, 255);
   min-width: 350%;
   min-height: 200%; 
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -104,8 +105,8 @@ transform: rotate(-45deg) translate(35px, 35px);
 }
 .menu-items {
   text-align: center;
-  font-family: 'Sarabun', sans-serif;
-  font-size: 2rem;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 3rem;
 }
 ul {
   margin: 1%;
@@ -125,19 +126,19 @@ li a {
 }
 a:link {
   text-decoration: none;
-  color: aliceblue;
+  color: black;
 }
 a:visited {
   text-decoration: none;
-  color: aliceblue;
+  color: black;
 }
 a:hover {
   text-decoration: underline;
-  color: aliceblue;
+  color: black;
 }
 a:active {
   text-decoration: underline;
-  color: aliceblue;
+  color: black;
 }
 .nav-desktop {
 display: none;
