update to mobilenav ui

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
 
 * {
   margin: 0;
@@ -96,7 +96,7 @@ transform: rotate(-45deg) translate(35px, 35px);
   position: absolute;
   top: 100%;
   right: 1%;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
   min-width: 350%;
   min-height: 200%; 
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -106,7 +106,7 @@ transform: rotate(-45deg) translate(35px, 35px);
 }
 .menu-items {
   text-align: center;
-  font-family: 'Fredoka One', cursive;
+  font-family: 'Rubik Mono One', sans-serif;
   font-size: 3rem;
 }
 ul {
@@ -127,19 +127,19 @@ li a {
 }
 a:link {
   text-decoration: none;
-  color: black;
+  color: rgb(255, 255, 255);
 }
 a:visited {
   text-decoration: none;
-  color: black;
+  color: rgb(255, 255, 255);
 }
 a:hover {
   text-decoration: underline;
-  color: black;
+  color: rgb(255, 255, 255);
 }
 a:active {
   text-decoration: underline;
-  color: black;
+  color: rgb(255, 255, 255);;
 }
 .nav-desktop {
 display: none;
