--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ transform: rotate(-45deg) translate(35px, 35px);
   right: 1%;
   background-color: rgb(0, 0, 0);
   min-width: 350%;
-  min-height: 200%; 
+  min-height: 250%; 
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 12px 16px;
   z-index: 1;
@@ -106,7 +106,7 @@ transform: rotate(-45deg) translate(35px, 35px);
 .menu-items {
   text-align: center;
   font-family: 'Sarabun', sans-serif;
-  font-size: 2rem;
+  font-size: 3rem;
 }
 ul {
   margin: 1%;
@@ -403,7 +403,7 @@ main {
     margin-left: 80%;
   }
   .button {
-    background-color: #0b6ec5;
+    background-color: #0583f2;
     font-family: 'Kanit', sans-serif;
     border: none;
     color: white;
