--- a/style.css
+++ b/style.css
@@ -95,9 +95,10 @@ transform: rotate(-45deg) translate(35px, 35px);
   position: absolute;
   top: 100%;
   right: 1%;
-  background-color: rgb(0, 0, 0);
+  background: transparent;
+  backdrop-filter: blur(5px);
   min-width: 350%;
-  min-height: 250%; 
+  min-height: 600%; 
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 12px 16px;
   z-index: 1;
